[package]
name = "thrash"
version = "0.1.0"
authors = ["Morley, Jonathan <morley.jonathan@gmail.com>"]
license = "Apache-2.0"

[dependencies]
serde_json = "1"
uuid = "0.5"
reqwest = "0.9.2"
failure = "*"
serde = "*"
serde_derive = "*"
cached = "0.4.3"
url = "1.6.0"
itertools = "0.6.2"
log = "0.4"
percent-encoding = "1.0.1"

[dev-dependencies]
mockito = "*"
