[package]
name = "thrash"
version = "0.1.1-alpha.0"
authors = ["Morley, Jonathan <morley.jonathan@gmail.com>"]
description = "Atlassian Bitbucket Server client"
documentation = "https://jonathanmorley.github.io/thrash"
repository = "https://github.com/jonathanmorley/thrash"
license = "Apache-2.0"

[dependencies]
serde_json = "1"
reqwest = "0.9"
failure = "0.1"
serde = "1"
serde_derive = "1"
url = "1"
itertools = "0.7"
log = "0.4"
percent-encoding = "1"
rayon = "1"

[dev-dependencies]
mockito = "0.13"
